--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -19,6 +19,7 @@
     color: $primary-color;
     border: none;
     border-radius: 5px;
+    transition: 0.5s;
     cursor: pointer;
     &:hover,
     &:focus {
@@ -41,6 +42,7 @@
 }
 .arrow-right {
     background-image: url('/src/images/arrow-right.svg');
+    
 }
 .dots {
     width: 40px;
