--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -19,32 +19,41 @@
   box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 5px, rgba(0, 0, 0, 0.1) -1px -1px 5px,
     rgba(0, 0, 0, 0.1) -1px 1px 5px, rgba(0, 0, 0, 0.1) 1px -1px 5px;
   padding: 20px 15px;
-  background-color: rgb(184, 184, 187);
+  background: linear-gradient(rgba(98, 99, 114, 0.4), rgba(98, 99, 114, 0.4));
 }
 .modal-info {
   display: flex;
-  border: 1px solid red;
+  // border: 1px solid red;
   @media screen and (max-width: 767px) {
-    margin-left: 20px;
-    margin-right: 20px;
+    // 
     display: block;
     height: 900px;
   }
 
   @media screen and (min-width: $tablet) {
     display: flex;
-    margin-left: 36px;
   }
 
   @media screen and (min-width: $desktop) {
-    margin-left: 16px;
     display: flex;
   }
 }
-.modal-card {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  position: absolute;
+.modal-movie-wrapper {
+    margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+  border: 1px solid $secondary-color;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 5px, rgba(0, 0, 0, 0.1) -1px -1px 5px,
+  rgba(0, 0, 0, 0.1) -1px 1px 5px, rgba(0, 0, 0, 0.1) 1px -1px 5px;;
+
+  padding: 20px 15px;
+
   background-color: $secondary-color;
+
   @media screen and (max-width: 767px) {
     max-width: 280px;
     height: 940px;
@@ -56,38 +65,13 @@
   }
 
   @media screen and (min-width: $desktop) {
-    margin-top: 40px;
-    margin-left: 16px;
     width: 814px;
     display: block;
   }
 }
 
-.modal-close {
-  fill: $primary-color;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  margin-left: auto;
-  margin-right: 16px;
-  margin-top: 16px;
-  background-color: transparent;
-  @media screen and (max-width: 767px) {
-    margin-bottom: 10px;
-    margin-top: 16px;
-    margin-right: 10px;
-  }
-
-  @media screen and (min-width: $tablet) {
-  }
-
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 10px;
-  }
-}
-
 .modal-movie-poster {
+   width: 280px;
   height: auto;
   border-radius: 5px;
   @media screen and (max-width: 767px) {
@@ -103,7 +87,6 @@
   @media screen and (min-width: $desktop) {
     width: 375px;
     height: auto;
-    margin-bottom: 40px;
   }
 }
 
@@ -111,10 +94,10 @@
   background-color: $secondary-color;
 
   @media screen and (min-width: $tablet) {
-    margin-top: 0;
-    margin-bottom: 40px;
-    margin-left: 68px;
-    margin-right: 72px;
+    // margin-top: 0;
+    // margin-bottom: 40px;
+    margin-left: 32px;
+    margin-right: 30px;
   }
   @media screen and (min-width: $desktop) {
     width: 375px;
@@ -254,13 +237,12 @@
   color: $primary-color;
 
   @media screen and (min-width: $tablet) {
-    max-width: 294px;
-    height: auto;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   @media screen and (min-width: $desktop) {
-    max-width: 426px;
-    height: auto;
+    
   }
 }
 .modal-movie-button-wrapper {
@@ -311,9 +293,4 @@
   &:hover {
     color: #ffffff;
   }
-}
-.active {
-  border: none;
-  background-color: $accent-color;
-  color: #ffffff;
 }
