--- a/src/sass/components/_header-home-page.scss
+++ b/src/sass/components/_header-home-page.scss
@@ -2,9 +2,11 @@
   max-width: 1600px;
   padding-top: 40px;
   padding-bottom: 40px;
-  background: linear-gradient(to right,
+  background: linear-gradient(
+      to right,
       rgba(0, 0, 0, 0.56),
-      rgba(0, 0, 0, 0.56)),
+      rgba(0, 0, 0, 0.56)
+    ),
     url('../images/header-home-page/header-bg-main-mobile.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -14,29 +16,35 @@
 
   @media screen and (min-width: $mobile) {
     height: 230px;
-    background: linear-gradient(to right,
+    background: linear-gradient(
+        to right,
         rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)),
+        rgba(0, 0, 0, 0.56)
+      ),
       url('../images/header-home-page/header-bg-main-mobile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
     @media screen and (max-width: ($tablet - 1)) and (min-device-pixel-ratio: 2),
-    screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
-    screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
-      background-image: linear-gradient(to right,
+      screen and (max-width: ($tablet - 1)) and (min-resolution: 192dpi),
+      screen and (max-width: ($tablet - 1)) and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
           rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)),
+          rgba(0, 0, 0, 0.56)
+        ),
         url('../images/header-home-page/header-bg-main-mobile@2x.jpg');
     }
   }
 
   @media screen and (min-width: $tablet) {
     height: 219px;
-    background: linear-gradient(to right,
+    background: linear-gradient(
+        to right,
         rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)),
+        rgba(0, 0, 0, 0.56)
+      ),
       url('../images/header-home-page/header-bg-main-tablet.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -45,39 +53,47 @@
 
   @media screen and (min-width: $tablet) {
     height: 216px;
-    background: linear-gradient(to right,
+    background: linear-gradient(
+        to right,
         rgba(0, 0, 0, 0.56),
-        rgba(0, 0, 0, 0.56)),
+        rgba(0, 0, 0, 0.56)
+      ),
       url('../images/header-home-page/header-bg-main-tablet.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 
     @media screen and (max-width: ($desktop - 1)) and (min-device-pixel-ratio: 2),
-    screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
-    screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
-      background-image: linear-gradient(to right,
+      screen and (max-width: ($desktop - 1)) and (min-resolution: 192dpi),
+      screen and (max-width: ($desktop - 1)) and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
           rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)),
+          rgba(0, 0, 0, 0.56)
+        ),
         url('../images/header-home-page/header-bg-main-tablet@2x.jpg');
     }
 
     @media screen and (min-width: $desktop) {
       height: 216px;
-      background: linear-gradient(to right,
+      background: linear-gradient(
+          to right,
           rgba(0, 0, 0, 0.56),
-          rgba(0, 0, 0, 0.56)),
+          rgba(0, 0, 0, 0.56)
+        ),
         url('../images/header-home-page/header-bg-main-desktop.jpg');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
 
       @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-        background-image: linear-gradient(to right,
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            to right,
             rgba(0, 0, 0, 0.56),
-            rgba(0, 0, 0, 0.56)),
+            rgba(0, 0, 0, 0.56)
+          ),
           url('../images/header-home-page/header-bg-main-desktop@2x.jpg');
       }
     }
@@ -87,8 +103,6 @@
 .header-container {
   margin-left: auto;
   margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
 
   @media screen and (min-width: $mobile) {
     padding-left: 20px;
@@ -99,35 +113,47 @@
     padding-left: 32px;
     padding-right: 32px;
   }
-
+  @media screen and (min-width: $desktop) {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
 }
 
 nav {
   margin-bottom: 40px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .logo-container {
-  text-decoration: none;
   display: flex;
+  text-decoration: none;
   align-items: center;
 }
 
-.logo {
-  position: absolute;
-  top: 40px;
-
-  @media screen and (min-width: $tablet) {
-    display: flex;
-    align-items: baseline;
+.logo-name {
+  @media screen and (max-width: ($tablet - 1)) {
+    display: none;
   }
+  @media screen and (min-width: $tablet) {
+    display: block;
+  }
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.17;
+  color: $secondary-color;
+  margin-left: 10px;
+  margin-left: 10px;
+}
 
-  text-decoration: none;
+.pages {
+  display: flex;
+}
 
-  color: #818181;
-
-  cursor: pointer;
+.library {
+  margin-left: 40px;
 }
 
 .icon-logo {
@@ -140,43 +166,14 @@ nav {
   }
 }
 
-.logo-name {
-  @media screen and (max-width: ($tablet - 1)) {
-    display: none;
-  }
-
-  @media screen and (min-width: $tablet) {
-    display: block;
-  }
-
+.page-link {
   font-style: normal;
-  font-weight: 500;
-  font-size: 30px;
-  line-height: 1.17;
-  color: $secondary-color;
-}
-
-.pages {
-  display: flex;
-  margin-top: 9px;
-  justify-content: flex-end;
-  font-family: $primary-font;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
-  text-transform: uppercase;
   color: $secondary-color;
-}
-
-.page {
-  &:first-child {
-    margin-right: 39px;
-  }
-}
-
-.page-link {
   text-decoration: none;
-  color: inherit;
+  text-transform: uppercase;
 }
 
 .page-link--current-page {
@@ -237,7 +234,6 @@ nav {
   font-family: $primary-font;
   color: $secondary-color;
 
-
   &::placeholder {
     color: $secondary-color;
   }
@@ -261,7 +257,7 @@ nav {
   border: transparent;
   color: $secondary-color;
 
-  .search-field:focus~& {
+  .search-field:focus ~ & {
     color: $accent-color;
   }
 }
