--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -92,6 +92,7 @@
     }
   }
 }
+
 .header-container {
   margin-left: auto;
   margin-right: auto;
@@ -109,19 +110,16 @@
   }
 }
 
-.logo-container {
-  text-decoration: none;
-}
-
 nav {
   margin-bottom: 40px;
-  // display:flex;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
 .logo-container {
   display: flex;
+  text-decoration: none;
   align-items: center;
 }
 
@@ -147,7 +145,6 @@ nav {
 
 .library {
   margin-left: 40px;
-  border-bottom: 3px solid $accent-color;
 }
 
 .header-buttons-list {
@@ -206,9 +203,7 @@ nav {
   border: 2px solid $accent-color;
   box-shadow: 0px 8px 43px 0px $accent-color;
 }
-.page-link:hover {
-  border-bottom: 3px solid $accent-color;
-}
+
 .header-button:focus {
   background-color: $accent-color;
   border: 2px solid $accent-color;
