--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -1,4 +1,4 @@
-<header class="overlay">
+<header class="overlay header-home">
   <div class="header-container">
     <nav>
       <a class="logo-container logo" href="/src/index.html">
