--- a/src/partials/my-library/header.html
+++ b/src/partials/my-library/header.html
@@ -1,4 +1,4 @@
-<header class="overlay">
+<header class="overlay header-library">
   <div class="header-container">
     <nav>
       <a class="logo-container" href="/src/index.html">
