--- a/src/partials/home-page/main.html
+++ b/src/partials/home-page/main.html
@@ -1,3 +1,3 @@
-<div class="main__container container" id="abc">
-    <div class="gallery"></div>
+<div class="main__container container">
+  <div class="gallery" id="abc"></div>
 </div>
