--- a/src/partials/utils/pagination.html
+++ b/src/partials/utils/pagination.html
@@ -1,7 +1,7 @@
 <div class="pagination__container container">
-    <button class="pagination__button arrow-left"></button>
-    <button class="pagination__button startBtn">1</button>
-    <span class="dots" id="previous">...</span>
+    <button class="pagination__button arrow-left" hidden></button>
+    <button class="pagination__button startBtn" hidden>1</button>
+    <span class="dots" id="previous" hidden>...</span>
     <button class="pagination__button pagination__button--current" data-index="1">1</button>
     <button class="pagination__button" data-index="2">2</button>
     <button class="pagination__button" data-index="3">3</button>
