--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -10,8 +10,9 @@
   background-position: center;
   margin-left: auto;
   margin-right: auto;
+  height: 230px;
   @media screen and (min-width: $mobile) {
-    height: 230px;
+    
     background: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.56),
@@ -33,7 +34,7 @@
     }
   }
   @media screen and (min-width: $tablet) {
-    height: 219px;
+    
     background: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.56),
@@ -45,7 +46,7 @@
     background-position: center;
   }
   @media screen and (min-width: $tablet) {
-    height: 216px;
+    
     background: linear-gradient(
         to right,
         rgba(0, 0, 0, 0.56),
@@ -66,7 +67,7 @@
         url('/src/images/header-library/tablet\ 2x.webp');
     }
     @media screen and (min-width: $desktop) {
-      height: 216px;
+      
       background: linear-gradient(
           to right,
           rgba(0, 0, 0, 0.56),
@@ -101,34 +102,16 @@
   border: 2px solid $secondary-color;
   border-radius: 5px;
   color: $secondary-color;
+  width: 100%;
+  height: 44px;
 
-  @media screen and (max-width: ($tablet - 1)) {
-    width: 129px;
-    height: 44px;
-  }
-
-  @media screen and (min-width: $tablet) {
-    width: 152px;
-    height: 44px;
-  }
-  @media screen and (min-width: $desktop) {
-    width: 147px;
-    height: 42px;
-  }
+  @media screen and (min-width: $mobile) {
+      width: 130px;
+    }
 }
 
 .btn--queue {
-  @media screen and (max-width: ($tablet - 1)) {
-    margin-left: 20px;
-  }
-
-  @media screen and (min-width: $tablet) {
-    margin-left: 32px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    margin-left: 16px;
-  }
+  margin-left: 20px;
 }
 
 .header-button:hover {
