--- a/src/template/modalMovie.hbs
+++ b/src/template/modalMovie.hbs
@@ -35,14 +35,14 @@
       <div class='modal-movie-button-wrapper'>
         <button
           data-name='watched'
-          class='modal-movie-button modal-left-button'
+          class='modal-movie-button modal-watched-button'
           type='button'
         >
           ADD TO WATCHED
         </button>
         <button
           data-name='queue'
-          class='modal-movie-button modal-right-button'
+          class='modal-movie-button modal-queue-button'
           type='button'
         >
           ADD TO QUEUE
