--- a/src/template/modalMovie.hbs
+++ b/src/template/modalMovie.hbs
@@ -4,6 +4,7 @@
       src='https://image.tmdb.org/t/p/w500{{poster_path}}'
       class='modal-movie-poster'
       alt='#'
+      loading='lazy'
     />
     <div class='modal-movie-information'>
       <h2 class='modal-movie-title'>{{title}}</h2>
