--- a/src/partials/utils/footer-modal.html
+++ b/src/partials/utils/footer-modal.html
@@ -10,7 +10,7 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/kotenko.jpg" class="swiper-slider__img"/>
+                        <img src="./images/footer-modal/kotenko.jpg" class="swiper-slider__img" loading='lazy'/>
                         <p class="swiper-slider__name">Konstantin Kotenko</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -30,7 +30,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/tolmachev.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/tolmachev.jpg" class="swiper-slider__img" loading='lazy'/>
                         <p class="swiper-slider__name">Denis Tolmachev</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -51,7 +51,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/severin.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/severin.jpg" class="swiper-slider__img" loading='lazy'/>
                         <p class="swiper-slider__name">Artem Severin</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -71,7 +71,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/lyfar.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/lyfar.jpg" class="swiper-slider__img" loading='lazy' />
                         <p class="swiper-slider__name">Natalia Lyfar</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -92,7 +92,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/nagorna.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/nagorna.jpg" class="swiper-slider__img" loading='lazy' />
                         <p class="swiper-slider__name">Olena Nahorna</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -112,7 +112,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/Boiko.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/Boiko.jpg" class="swiper-slider__img" loading='lazy' />
                         <p class="swiper-slider__name">Juliya Boiko</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -132,7 +132,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/khmil.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/khmil.jpg" class="swiper-slider__img" loading='lazy' />
                         <p class="swiper-slider__name">Khmil Vitalii</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -152,7 +152,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/baliajpg.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/baliajpg.jpg" class="swiper-slider__img" loading='lazy' />
                         <p class="swiper-slider__name">Ivan Balya</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -172,7 +172,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/oliynik.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/oliynik.jpg" class="swiper-slider__img" loading='lazy' />
                         <p class="swiper-slider__name">Volodymir Oleynik</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -192,7 +192,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/larin.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/larin.jpg" class="swiper-slider__img" loading='lazy' />
                         <p class="swiper-slider__name">Artem Larin</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
@@ -213,7 +213,7 @@
                         </ul>
                     </div>
                     <div class="swiper-slide">
-                        <img src="./images/footer-modal/trush.jpg" class="swiper-slider__img" />
+                        <img src="./images/footer-modal/trush.jpg" class="swiper-slider__img" loading='lazy' />
                         <p class="swiper-slider__name">Volodymir Trush</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
