--- a/src/sass/layouts/_loader.scss
+++ b/src/sass/layouts/_loader.scss
@@ -1,9 +1,24 @@
-.loader{
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  opacity: 1;
+  transition: 0.8s opacity;
+  z-index: 1000;
+}
+
+.loaded_hiding .loader {
+  opacity: 0;
+}
+
+.loaded .loader {
+  display: none;
 }
 
 .loader-container{
@@ -67,7 +82,7 @@
   bottom: 20px;
   left: 20px;
   border-radius: 50%;
-  background-color: $secondary-color;
+  background-color: #dcdcdc;
 }
 
 @keyframes animate {
