--- a/src/template/movieCard.hbs
+++ b/src/template/movieCard.hbs
@@ -5,6 +5,7 @@
       class='movie-card__img'
       src='https://image.tmdb.org/t/p/w500{{poster_path}}'
       alt='#'
+      loading='lazy'
     />
     <div class='movie-card__info'>
       <h2 class='movie-card__title'>{{original_title}}</h2>
