--- a/src/partials/modal-movie/modal_movie.html
+++ b/src/partials/modal-movie/modal_movie.html
@@ -2,7 +2,7 @@
   <div class="modal-movie-overlay"></div>
   <button
     type="button"
-    class="modal-movie-close-button"
+    class="modal-movie-close-button is-hidden"
     data-action="close-lightbox"
   ></button>
 </div>
