--- a/src/template/modalMovie.hbs
+++ b/src/template/modalMovie.hbs
@@ -48,6 +48,7 @@
       <div class='buttonTrailer'>
         <button
           data-name='Trailer'
+          data-attribute="{{id}}"
           class='modal-movie-trailer modal-right-button'
           type='button'>
           TRAILER
