--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,3 +17,4 @@
 @import './layouts/footer/footer-modal';
 @import './layouts/loader';
 @import './components/_theme-swith';
+@import './components/trailer-modal';
