--- a/src/template/movieCard.hbs
+++ b/src/template/movieCard.hbs
@@ -7,7 +7,7 @@
     />
     <div class='movie-card__info'>
       <h2 class='movie-card__title'>{{original_title}}</h2>
-      <p class='movie-card__brief'> {{release_date}}</p>
+      <p class='movie-card__brief'> {{release_date}}/{{genre_names}}</p>
     </div>
   </div>
 {{/each}}
