fix theme switch

--- a/src/partials/utils/switch-theme.html
+++ b/src/partials/utils/switch-theme.html
@@ -1,4 +1,4 @@
-<div class="toolbar container">
+<div class="toolbar">
     <div class="theme-switch">
         <svg class="theme-switch__icon theme-switch__icon--accent1" role="img">
             <use href="./images/icons.svg#sun"></use>
