--- a/src/sass/components/_theme-swith.scss
+++ b/src/sass/components/_theme-swith.scss
@@ -45,7 +45,6 @@ body.dark-theme {
 .toolbar {
   display: flex;
   padding: 16px 24px;
-  position: absolute;
   top: 180px;
   right: 0;
   
@@ -86,6 +85,7 @@ body.dark-theme {
   height: 16px;
   border-radius: 50em;
   padding: 3px 0;
+  z-index: 0;
 }
 
 .theme-switch__toggle {
