--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -1,6 +1,6 @@
 .modal-is-open {
   opacity: 1;
-  pointer-events: auto;
+  pointer-events: auto;  
 }
 
 .is-hidden {
@@ -8,9 +8,9 @@
 }
 
 .modal-is-open .modal-movie-overlay {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   position: fixed;
@@ -19,13 +19,14 @@
   box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 5px, rgba(0, 0, 0, 0.1) -1px -1px 5px,
     rgba(0, 0, 0, 0.1) -1px 1px 5px, rgba(0, 0, 0, 0.1) 1px -1px 5px;
   padding: 20px 15px;
-  background: linear-gradient(rgba(98, 99, 114, 0.4), rgba(98, 99, 114, 0.4));
+  background: linear-gradient(rgba(17, 17, 18, 0.4), rgba(12, 12, 14, 0.4));
 }
+
 .modal-info {
   display: flex;
   @media screen and (max-width: 767px) {
     display: block;
-    height: 900px;
+    height: 100vh;
   }
 
   @media screen and (min-width: $tablet) {
@@ -37,16 +38,16 @@
   }
 }
 .modal-movie-wrapper {
-    margin: 0;
+  margin: 0;
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
   margin-bottom: 40px;
-
+  z-index: 99999;
   border: 1px solid $secondary-color;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 5px, rgba(0, 0, 0, 0.1) -1px -1px 5px,
-  rgba(0, 0, 0, 0.1) -1px 1px 5px, rgba(0, 0, 0, 0.1) 1px -1px 5px;;
+    rgba(0, 0, 0, 0.1) -1px 1px 5px, rgba(0, 0, 0, 0.1) 1px -1px 5px;
 
   padding: 20px 15px;
 
@@ -54,7 +55,8 @@
 
   @media screen and (max-width: 767px) {
     max-width: 280px;
-    height: 940px;
+    height: 958px;
+    margin: 0 avto;
   }
 
   @media screen and (min-width: $tablet) {
@@ -65,11 +67,12 @@
   @media screen and (min-width: $desktop) {
     width: 814px;
     display: block;
+    margin-bottom: 20px;
   }
 }
 
 .modal-movie-poster {
-   width: 280px;
+  width: 280px;
   height: auto;
   border-radius: 5px;
   @media screen and (max-width: 767px) {
@@ -239,7 +242,6 @@
   }
 
   @media screen and (min-width: $desktop) {
-    
   }
 }
 .modal-movie-button-wrapper {
@@ -259,6 +261,7 @@
 }
 
 .modal-movie-button {
+  cursor: pointer;
   width: 136px;
   height: 44px;
   background: $secondary-color;
@@ -277,7 +280,8 @@
   }
 }
 
-.modal-movie-trailer{
+.modal-movie-trailer {
+  cursor: pointer;
   width: 136px;
   height: 44px;
   background: $secondary-color;
@@ -308,9 +312,9 @@
   }
 }
 
-.buttonTrailer{
+.buttonTrailer {
   justify-content: space-between;
-  align-items: center;   
+  align-items: center;
 }
 
 .modal-left-button {
