--- a/src/sass/components/_movie-card.scss
+++ b/src/sass/components/_movie-card.scss
@@ -1,4 +1,5 @@
 .movie-card {
+  cursor: pointer;
   margin-bottom: 20px;
   @media screen and (min-width: $tablet) {
     flex-basis: calc((100% - 32px) / 2);
