--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -94,7 +94,7 @@
 .header-buttons-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
+  // margin-bottom: 40px;
 }
 
 .header-button {
