code for genres

--- a/src/template/movieCard.hbs
+++ b/src/template/movieCard.hbs
@@ -9,7 +9,7 @@
     />
     <div class='movie-card__info'>
       <h2 class='movie-card__title'>{{original_title}}</h2>
-      <p class='movie-card__brief'> {{createYear}}</p>
+      <p class='movie-card__brief'> {{genre_names}}|{{release_year}}</p>
     </div>
   </div>
 {{/each}}
