--- a/src/sass/components/_header-library.scss
+++ b/src/sass/components/_header-library.scss
@@ -8,6 +8,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-color: black;
   margin-left: auto;
   margin-right: auto;
   height: 230px;
