fix theme button

--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -32,6 +32,7 @@
         </svg>
       </button>
     </form>
+    <include src="./partials/utils/switch-theme.html"></include>
   </div>
-  <include src="./partials/utils/switch-theme.html"></include>
+  <!-- <include src="./partials/utils/switch-theme.html"></include> -->
 </header>
