--- a/src/partials/my-library/header.html
+++ b/src/partials/my-library/header.html
@@ -28,6 +28,7 @@
         </li>
       </ul>
     </div>
+    <include src="./partials/utils/switch-theme.html"></include>
   </div>
-  <include src="./partials/utils/switch-theme.html"></include>
+  <!-- <include src="./partials/utils/switch-theme.html"></include> -->
 </header>
