--- a/src/sass/components/_theme-swith.scss
+++ b/src/sass/components/_theme-swith.scss
@@ -56,20 +56,22 @@ body.dark-theme {
 
 .toolbar {
   display: flex;
-  padding: 16px 24px;
-  top: 180px;
+  justify-content: flex-end;
+  padding: revert;
+  bottom: 50;
   right: 0;
+  position: absolute;
   
     @media screen and (min-width: $mobile) {
-      padding: 16px 20px;
+      padding-right:20px;
     }
   
     @media screen and (min-width: $tablet) {
-      padding: 16px 32px;
+      padding-right:32px;
     }
   
     @media screen and (min-width: $desktop) {
-      padding: 16px 71px;
+      padding-right: 71px;
     }
 }
 
