--- a/src/template/modalMovie.hbs
+++ b/src/template/modalMovie.hbs
@@ -22,7 +22,7 @@
           <p class='modal-movie-popularity'>{{popularity}}</p>
           <p class='modal-movie-description-title'>{{original_title}}</p>
           <p class='modal-movie-description'>
-            <span class='modal-movie-genre-name'>{{name}}</span>
+            <span class='modal-movie-genre-name'>{{genre_names}}</span>
             </p>
         </div>
       </div>
