--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -23,7 +23,7 @@
         type="text"
         name="query"
         autocomplete="off"
-        placeholder="Поиск фильмов"
+        placeholder="Search movies"
         class="search-field"
       />
       <button type="submit" class="search-btn">
