--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -8,13 +8,16 @@
         <span class="logo-name">Filmoteka</span>
       </a>
       <ul class="pages">
-        <li class="page home">
+        <li class="page">
           <a href="/src/index.html" class="page-link page-link--current-page"
             >home</a
           >
         </li>
-        <li class="page library">
+        <li class="page">
           <a href="/src/library.html" class="page-link">my library</a>
+        </li>
+        <li class="page">
+          <a href="/src/login.htm" class="page-link">Login</a>
         </li>
       </ul>
     </nav>
