--- a/src/sass/components/_login.scss
+++ b/src/sass/components/_login.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-
 .wrapper {
   overflow: hidden;
   max-width: 390px;
@@ -32,7 +30,7 @@
   overflow: hidden;
   margin: 30px 0 10px 0;
   justify-content: space-between;
-  border: 2px solid $accent-color;
+  border: 1px solid lightgrey;
   border-radius: 15px;
 }
 .slide-controls .slide {
@@ -104,14 +102,13 @@ input[type='radio'] {
   outline: none;
   padding-left: 15px;
   border-radius: 15px;
-  border: 2px solid $accent-color;
+  border: 1px solid lightgrey;
   border-bottom-width: 2px;
   font-size: 17px;
   transition: all 0.3s ease;
 }
 .form-inner form .field input:focus {
   border-color: $accent-color;
-  border: 2px solid $accent-color;
   /* box-shadow: inset 0 0 3px #fb6aae; */
 }
 .form-inner form .field input::placeholder {
