--- a/src/partials/login/login.html
+++ b/src/partials/login/login.html
@@ -1,5 +1,8 @@
 <article>
   <div class="wrapper">
+    <svg width="20px" height="20px" class="icon-back" id="iconBack">
+      <use href="/src/images/header-home-page/sprite.svg#icon-back"></use>
+    </svg>
     <div class="title-text">
       <div class="title login">Login Form</div>
       <div class="title signup">Signup Form</div>
@@ -20,12 +23,13 @@
           <div class="field">
             <input type="password" placeholder="Password" required />
           </div>
-          <div class="pass-link"><a href="#">Forgot password?</a></div>
           <div class="field btn">
             <div class="btn-layer"></div>
             <input type="submit" value="Login" />
           </div>
-          <div class="signup-link">Not a member? <a href="">Signup now</a></div>
+          <!-- <div class="signup-link">
+            Not a member? <a href="#" id="signupNow">Signup now</a>
+          </div> -->
         </form>
         <form action="#" class="signup">
           <div class="field">
