--- a/src/partials/utils/footer.html
+++ b/src/partials/utils/footer.html
@@ -1,11 +1,14 @@
 <footer class="footer">
+  <div class="footer_container">
     <p class="footer__text">&#169; 2022 | All Rights Reserved |</p>
     <p class="footer__info">
-        Developed with
-        <svg class="footer__icon">
-            <use href="./images/icons.svg#icon-heart"></use>
-        </svg>
-        by
-        <span class="footer__info--accent js-open-modal">GoIT Students</span>
+      Developed with
+      <svg class="footer__icon">
+        <use href="./images/icons.svg#icon-heart"></use>
+      </svg>
+      by
+      <span class="footer__info--accent js-open-modal">GoIT Students</span>
     </p>
+  </div>
 </footer>
+
