--- a/src/sass/components/_theme-swith.scss
+++ b/src/sass/components/_theme-swith.scss
@@ -58,7 +58,7 @@ body.dark-theme {
   display: flex;
   justify-content: flex-end;
   padding: revert;
-  bottom: 50;
+  bottom: 25px;
   right: 0;
   position: absolute;
   
