added blank poster

--- a/src/template/movieCard.hbs
+++ b/src/template/movieCard.hbs
@@ -1,12 +1,21 @@
 {{#each this}}
   <div class='movie-card'>
-    <img
-      id='{{id}}'
-      class='movie-card__img'
-      src='https://image.tmdb.org/t/p/w500{{poster_path}}'
-      alt='#'
-      loading='lazy'
-    />
+    {{#if poster_path}}
+      <img
+        id='{{id}}'
+        class='movie-card__img'
+        src='https://image.tmdb.org/t/p/w500{{poster_path}}'
+        alt='poster'
+        loading='lazy'
+      />
+    {{else}}
+      <img
+        class='movie-card__img'
+        src='https://goit.ua/wp-content/uploads/2018/07/cropped-LOGOOOO-e1531571952503-1.png'
+        alt='poster'
+        loading='lazy'
+      />
+    {{/if}}
     <div class='movie-card__info'>
       <h2 class='movie-card__title'>{{original_title}}</h2>
 
