--- a/src/partials/my-library/header.html
+++ b/src/partials/my-library/header.html
@@ -12,7 +12,7 @@
           <a href="/src/index.html" class="page-link">home</a>
         </li>
         <li class="page library">
-          <a href="/src/library.html" class="page-link page-link--current-page"
+          <a href="/src/library.html" class="page-link library--link page-link--current-page"
             >my library</a
           >
         </li>
