--- a/src/partials/login/login.html
+++ b/src/partials/login/login.html
@@ -1,5 +1,6 @@
 <article>
   <div class="wrapper">
+    <include src="./partials/utils/switch-theme.html"></include>
     <svg width="20px" height="20px" class="icon-back" id="iconBack">
       <use href="/src/images/header-home-page/sprite.svg#icon-back"></use>
     </svg>
