--- a/src/partials/utils/switch-theme.html
+++ b/src/partials/utils/switch-theme.html
@@ -1,4 +1,5 @@
 <div class="toolbar">
+    <div class="toolbar__background">
     <div class="theme-switch">
         <svg class="theme-switch__icon theme-switch__icon--accent1" role="img">
             <use href="./images/icons.svg#sun"></use>
@@ -15,4 +16,5 @@
             <use href="./images/icons.svg#moon"></use>
         </svg>
     </div>
+</div>
 </div>
