--- a/src/sass/components/_change-theme.scss
+++ b/src/sass/components/_change-theme.scss
@@ -90,6 +90,19 @@ body.dark-theme {
   margin-left: 8px;
 }
 
+.toolbar__background {
+  background-color: $primary-color;
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  position: relative;
+  width: 96px;
+  height: 32px;
+  border-radius: 50em;
+  padding: 3px 0;
+  z-index: 100;
+}
+
 .theme-switch__control {
   display: flex;
   align-items: center;
