--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -7,8 +7,8 @@
   display: none;
 }
 
-.modal-is-open .modal-movie-overlay {
-  overflow: auto;
+.modal-is-open .modal-movie-overlay {  
+  overflow-y: hidden;
   width: 100%;
   height: 100%;
   top: 0;
@@ -20,6 +20,9 @@
     rgba(0, 0, 0, 0.1) -1px 1px 5px, rgba(0, 0, 0, 0.1) 1px -1px 5px;
   padding: 20px 15px;
   background: linear-gradient(rgba(17, 17, 18, 0.4), rgba(12, 12, 14, 0.4));
+   @media screen and (max-width: 767px) {
+    overflow: avto;
+  }
 }
 
 .modal-info {
@@ -35,15 +38,14 @@
 
   @media screen and (min-width: $desktop) {
     display: flex;
+    
   }
 }
 .modal-movie-wrapper {
-  margin: 0;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  z-index: 99999;
+  position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
   border: 1px solid $secondary-color;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 5px, rgba(0, 0, 0, 0.1) -1px -1px 5px,
@@ -55,8 +57,7 @@
 
   @media screen and (max-width: 767px) {
     max-width: 280px;
-    height: 958px;
-    margin: 0 avto;
+    height: avto;
   }
 
   @media screen and (min-width: $tablet) {
@@ -183,7 +184,7 @@
 
 .modal-movie-description-title {
   text-transform: uppercase;
-  margin-bottom: 6px;
+  margin-bottom: 3px;
   margin-top: 0;
   font-family: $primary-font;
   font-style: normal;
@@ -192,7 +193,7 @@
   line-height: 1.33;
   @media screen and (max-width: 767px) {
     margin-bottom: 6px;
-  }
+  }  
 }
 
 .modal-movie-description-vote {
@@ -218,6 +219,7 @@
   font-size: 12px;
   line-height: 1.33;
 }
+
 
 .modal-movie-about {
   margin-top: 20px;
@@ -317,7 +319,7 @@
   align-items: center;
 }
 
-.modal-left-button {
+.modal-watched-button {
   margin-right: 15px;
   background-color: $secondary-color;
   &:focus,
@@ -325,10 +327,55 @@
     color: #ffffff;
   }
 }
-
 .modal-queue-button {
   &:focus,
   &:hover {
     color: #ffffff;
   }
+}
+
+.buttonYouTubeTrailer{
+ position: absolute;
+  top: 30px;
+  left: 300px;
+  width: 70px;
+  height: 49px;
+  border-radius: 16px;
+  border: solid 1px #f61c0d;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &:hover {
+    border: solid 1px #ff1100b7;
+  }
+
+  &:hover .watch-trailer-btn__icon {
+    fill: #ff1100b7;
+  }
+  & > .watch-trailer-btn__icon {
+    pointer-events: none;
+  }
+  @media screen and (max-width: 767px) {
+     top: 20px;
+  left: 180px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    top: 25px;
+  left: 200px;
+  }  
+  @media screen and (min-width: $desktop) {
+    top: 30px;
+  left: 300px;
+  }
+}
+
+.iconYouTube{
+  // // display: flex;
+  // flex-wrap: wrap;
+  // align-items: center;
+  width: 40px;
+  height: 40px;
+  // fill: #f61c0d;
 }
