--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -18,3 +18,4 @@
 @import './layouts/loader';
 @import './components/_theme-swith';
 @import './components/trailer-modal';
+@import './utils/overflow.scss';
