--- a/src/partials/home-page/header.html
+++ b/src/partials/home-page/header.html
@@ -17,7 +17,12 @@
           <a href="/src/library.html" class="page-link">my library</a>
         </li>
         <li class="page">
-          <a href="/src/login.htm" class="page-link">Login</a>
+          <a href="/src/login.htm" class="page-link" id="authorization"
+            >Login</a
+          >
+        </li>
+        <li class="page">
+          <a href="#" class="page-link" id="signOut">Sign Out</a>
         </li>
       </ul>
     </nav>
