--- a/src/partials/utils/footer-modal.html
+++ b/src/partials/utils/footer-modal.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/khmil.jpg" class="swiper-slider__img" loading='lazy' />
-                        <p class="swiper-slider__name">Khmil Vitalii</p>
+                        <p class="swiper-slider__name">Vitalii Khmil</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
                                 <a href="https://github.com/VitaliyKhmil" class="slides-social__link">
@@ -166,7 +166,7 @@
                     </div>
                     <div class="swiper-slide">
                         <img src="./images/footer-modal/oliynik.jpg" class="swiper-slider__img" loading='lazy' />
-                        <p class="swiper-slider__name">Volodymir Oleynik</p>
+                        <p class="swiper-slider__name">Volodymyr Oliinyk</p>
                         <ul class="slides-social">
                             <li class="slides-social__item">
                                 <a href="https://github.com/Volodymyr-Oliynyk" class="slides-social__link">
