finish switch theme

--- a/src/partials/login/login.html
+++ b/src/partials/login/login.html
@@ -1,5 +1,5 @@
-<include src="./partials/utils/switch-theme.html"></include>
 <div class="main-wrapper">
+  <include src="./partials/utils/login-switch-theme.html"></include>
   <div class="card-container">
     <div class="card">
       <div class="login-form">
@@ -21,7 +21,9 @@
           Don't have an account ?
           <button class="btn btn-rotate" id="btn-signup">Sign up</button>
         </div>
+        
       </div>
+      
       <!-- end login-form panel -->
       <div class="signup-form">
         <div class="header">Sign up</div>
@@ -63,4 +65,5 @@
     <!-- end card -->
   </div>
   <!-- end card-container -->
+  <!-- <include src="./partials/utils/switch-theme.html"></include> -->
 </div>
