--- a/src/sass/components/_change-theme.scss
+++ b/src/sass/components/_change-theme.scss
@@ -5,7 +5,7 @@ body.light-theme {
 }
 
 body.dark-theme {
-  background-color: #333333;
+  background-color: $primary-color;
   color: $secondary-color;
   transition: 0.5s;
 
@@ -52,6 +52,10 @@ body.dark-theme {
   & .modal-movie-descript{
     color: $primary-color;
   }
+
+  & .main-wrapper{
+    background-color: $primary-color;
+  }
 }
 
 .toolbar {
@@ -60,6 +64,26 @@ body.dark-theme {
   padding: revert;
   bottom: 25px;
   right: 0;
+  position: absolute;
+  
+    @media screen and (min-width: $mobile) {
+      padding-right:20px;
+    }
+  
+    @media screen and (min-width: $tablet) {
+      padding-right:32px;
+    }
+  
+    @media screen and (min-width: $desktop) {
+      padding-right: 71px;
+    }
+}
+
+.toolbar--login {
+  display: flex;
+  justify-content: flex-end;
+  top: 175px;
+  right: 15;
   position: absolute;
   
     @media screen and (min-width: $mobile) {
