--- a/src/template/modalMovie.hbs
+++ b/src/template/modalMovie.hbs
@@ -58,8 +58,9 @@
           data-name='Trailer'
           data-attribute='{{id}}'
           class='buttonYouTubeTrailer'
-          type='button'>
-          <svg class='iconYouTube' alt="YouTube Trailer">
+          type='button'
+        >
+          <svg class='iconYouTube' alt='YouTube Trailer'>
             <use href='./images/icons.svg#icon-youtube'></use>
           </svg>
         </button>
