--- a/src/sass/components/_modal-movie.scss
+++ b/src/sass/components/_modal-movie.scss
@@ -1,13 +1,13 @@
 .modal-is-open {
   opacity: 1;
-  pointer-events: auto;  
+  pointer-events: auto;
 }
 
 .is-hidden {
   display: none;
 }
 
-.modal-is-open .modal-movie-overlay {  
+.modal-is-open .modal-movie-overlay {
   overflow-y: hidden;
   width: 100%;
   height: 100%;
@@ -20,7 +20,7 @@
     rgba(0, 0, 0, 0.1) -1px 1px 5px, rgba(0, 0, 0, 0.1) 1px -1px 5px;
   padding: 20px 15px;
   background: linear-gradient(rgba(17, 17, 18, 0.4), rgba(12, 12, 14, 0.4));
-   @media screen and (max-width: 767px) {
+  @media screen and (max-width: 767px) {
     overflow: avto;
   }
 }
@@ -29,7 +29,7 @@
   display: flex;
   @media screen and (max-width: 767px) {
     display: block;
-    height: 100vh;
+    height: 100%;
   }
 
   @media screen and (min-width: $tablet) {
@@ -38,14 +38,13 @@
 
   @media screen and (min-width: $desktop) {
     display: flex;
-    
   }
 }
 .modal-movie-wrapper {
   position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   border: 1px solid $secondary-color;
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 5px, rgba(0, 0, 0, 0.1) -1px -1px 5px,
@@ -76,6 +75,7 @@
   width: 280px;
   height: auto;
   border-radius: 5px;
+  position: relative;
   @media screen and (max-width: 767px) {
     width: 240px;
     height: 357px;
@@ -130,22 +130,24 @@
     margin-bottom: 0;
   }
 }
-.modal-movie-data-reiting {
-  display: flex;
-}
+
 .modal-movie-data {
+  margin: 0;
   margin-top: 20px;
-  padding: 0;
+}
+.modal-movie-item {
+  display: flex;
+  margin-top: 10px;
 }
 
 .modal-movie-info {
   margin-top: 20px;
+  margin-left: 39px;
 }
 .modal-movie-data-name {
   font-family: $primary-font;
-  margin: 0;
+  width: 69px;
   margin-right: 30px;
-  padding-bottom: 8px;
   color: #8c8c8c;
   font-style: normal;
   font-weight: 500;
@@ -168,20 +170,6 @@
   line-height: 1.16;
 }
 
-.modal-movie-popularity {
-  line-height: 1.16;
-  margin-bottom: 9px;
-  margin-top: 0;
-  font-family: $primary-font;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.16;
-  @media screen and (min-width: $tablet) {
-    margin-bottom: 8px;
-  }
-}
-
 .modal-movie-description-title {
   text-transform: uppercase;
   margin-bottom: 3px;
@@ -193,7 +181,7 @@
   line-height: 1.33;
   @media screen and (max-width: 767px) {
     margin-bottom: 6px;
-  }  
+  }
 }
 
 .modal-movie-description-vote {
@@ -219,7 +207,6 @@
   font-size: 12px;
   line-height: 1.33;
 }
-
 
 .modal-movie-about {
   margin-top: 20px;
@@ -334,48 +321,39 @@
   }
 }
 
-.buttonYouTubeTrailer{
- position: absolute;
+.buttonYouTubeTrailer {
+  position: absolute;
   top: 30px;
   left: 300px;
-  width: 70px;
-  height: 49px;
-  border-radius: 16px;
+  width: 48px;
+  height: 36px;
+  border-radius: 10px;
   border: solid 1px #f61c0d;
   cursor: pointer;
-  display: flex;
   justify-content: center;
   align-items: center;
   &:hover {
     border: solid 1px #ff1100b7;
+    
   }
-
-  &:hover .watch-trailer-btn__icon {
-    fill: #ff1100b7;
-  }
-  & > .watch-trailer-btn__icon {
-    pointer-events: none;
-  }
+  
   @media screen and (max-width: 767px) {
-     top: 20px;
-  left: 180px;
+    top: 20px;
+    left: 180px;
   }
 
   @media screen and (min-width: $tablet) {
     top: 25px;
-  left: 200px;
-  }  
+    left: 200px;
+  }
   @media screen and (min-width: $desktop) {
     top: 30px;
-  left: 300px;
+    left: 300px;
   }
 }
 
-.iconYouTube{
-  // // display: flex;
-  // flex-wrap: wrap;
-  // align-items: center;
-  width: 40px;
-  height: 40px;
-  // fill: #f61c0d;
+.icon-Youtube{
+   display: flex;
+  justify-content: center;
+  align-items: center;
 }
